# RuuviMenu

./: CMakeLists.txt  LICENSE  README.md
assets/: Info.plist  Ruuvi.icns
src/: AppDelegate.swift  BluetoothDelegate.swift  PrefsViewController.swift  RuuviParsing.swift  StatusBarController.swift
